# esp32-partlib

./: README.md
components/mcp4728/: CMakeLists.txt  Kconfig  mcp4728.c  mcp4728.h  my_i2cdac.c  my_i2cdac.h
components/mqtt_wrapper/: CMakeLists.txt  Kconfig.projbuild  component.mk  mqtt_main.c  mqtt_main.h
components/provisioning/: CMakeLists.txt  Kconfig.projbuild  LICENSE  component.mk  my_provisioning.c  my_provisioning.h
components/rotary_encoder/: CMakeLists.txt  my_encoder.c  my_encoder.h  rotary_encoder_test.c
components/simple_ota/: CMakeLists.txt  component.mk  index.html  otaserver.c  otaserver.h
components/tca9534/: CMakeLists.txt  i2c_exp.c  i2c_exp.h  tca9534.c  tca9534.h
components/tcp_console_driver/: CMakeLists.txt  tcp_console_driver.c  tcp_console_driver.h
